<resources>
    <string name="app_name">Just Java</string>
    <string name="order_button">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="quantity">Quantity</string>
    <string name="default_quantity">1</string>
    <string name="default_price">$5.00</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
