<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/timcoffee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context="com.example.itskshitizsh.justjava.MainActivity">

        <EditText
            android:id="@+id/name_edit_view"
            android:layout_width="@dimen/edit_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_dp"
            android:background="@color/colorWhite"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="@dimen/std_dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_dp"
            android:layout_marginLeft="@dimen/std_dp"
            android:layout_marginStart="@dimen/std_dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textSize="@dimen/std3_sp" />

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/std_dp"
            android:layout_marginRight="@dimen/std_dp"
            android:paddingLeft="@dimen/std2_dp"
            android:paddingRight="@dimen/std2_dp"
            android:text="@string/whipped_cream"
            android:textSize="@dimen/std_sp" />

        <CheckBox
            android:id="@+id/chocolate_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/std_dp"
            android:layout_marginRight="@dimen/std_dp"
            android:paddingLeft="@dimen/std2_dp"
            android:paddingRight="@dimen/std2_dp"
            android:text="@string/chocolate"
            android:textSize="@dimen/std_sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_dp"
            android:layout_marginLeft="@dimen/std_dp"
            android:layout_marginStart="@dimen/std_dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textSize="@dimen/std3_sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/std_dp"
            android:layout_marginRight="@dimen/std_dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement"
                android:layout_width="@dimen/std4_dp"
                android:layout_height="@dimen/std4_dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/std2_sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/std_dp"
                android:layout_marginStart="@dimen/std_dp"
                android:text="@string/default_quantity"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/std2_sp" />

            <Button
                android:id="@+id/increment"
                android:layout_width="@dimen/std4_dp"
                android:layout_height="@dimen/std4_dp"
                android:layout_marginLeft="@dimen/std_dp"
                android:layout_marginStart="@dimen/std_dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/std2_sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/order_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/std_dp"
                android:layout_marginRight="@dimen/std_dp"
                android:layout_marginTop="@dimen/std_dp"
                android:onClick="submitOrder"
                android:padding="@dimen/std2_dp"
                android:text="@string/order_button"
                android:textSize="@dimen/std4_sp" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>